@@ -155,16 +155,16 @@
         <version.org.jdom>1.1.3</version.org.jdom>
         <version.org.jboss.activemq.artemis.integration>1.0.2</version.org.jboss.activemq.artemis.integration>
         <version.org.jboss.common.jboss-common-beans>2.0.0.Final</version.org.jboss.common.jboss-common-beans>
-        <version.org.jboss.hal.release-stream>2.9.0.Alpha1</version.org.jboss.hal.release-stream>
+        <version.org.jboss.hal.release-stream>2.9.0.Alpha3</version.org.jboss.hal.release-stream>
         <version.org.jboss.ejb-client>2.1.4.Final</version.org.jboss.ejb-client>
         <version.org.jboss.ejb3.ext-api>2.2.0.Final</version.org.jboss.ejb3.ext-api>
         <version.org.jboss.genericjms>1.0.7.Final</version.org.jboss.genericjms>
         <version.org.jboss.iiop-client>1.0.0.Final</version.org.jboss.iiop-client>
         <version.org.jboss.ironjacamar>1.3.4.Final</version.org.jboss.ironjacamar>
         <version.org.jboss.jandex>2.0.3.Final</version.org.jboss.jandex>
-        <version.org.jboss.jboss-transaction-spi>7.3.3.Final</version.org.jboss.jboss-transaction-spi>
+        <version.org.jboss.jboss-transaction-spi>7.5.0.Final</version.org.jboss.jboss-transaction-spi>
         <version.org.jboss.metadata>10.0.0.Final</version.org.jboss.metadata>
-        <version.org.jboss.narayana>5.3.4.Final</version.org.jboss.narayana>
+        <version.org.jboss.narayana>5.3.5.Final</version.org.jboss.narayana>
         <version.org.jboss.mod_cluster>1.3.3.Final</version.org.jboss.mod_cluster>
         <version.org.jboss.openjdk-orb>8.0.6.Final</version.org.jboss.openjdk-orb>
         <version.org.jboss.xnio.netty.netty-xnio-transport>0.1.1.Final</version.org.jboss.xnio.netty.netty-xnio-transport>
@@ -199,8 +199,8 @@
         <version.org.jboss.spec.javax.xml.soap.jboss-saaj-api_1.3_spec>1.0.3.Final</version.org.jboss.spec.javax.xml.soap.jboss-saaj-api_1.3_spec>
         <version.org.jboss.spec.javax.xml.ws.jboss-jaxws-api_2.2_spec>2.0.3.Final</version.org.jboss.spec.javax.xml.ws.jboss-jaxws-api_2.2_spec>
         <version.org.jboss.spec.javax.websockets>1.1.1.Final</version.org.jboss.spec.javax.websockets>
-        <version.org.jboss.weld.weld>2.3.5.Final</version.org.jboss.weld.weld>
-        <version.org.jboss.weld.weld-api>2.3.SP2</version.org.jboss.weld.weld-api>
+        <version.org.jboss.weld.weld>2.4.0.Final</version.org.jboss.weld.weld>
+        <version.org.jboss.weld.weld-api>2.4.Final</version.org.jboss.weld.weld-api>
         <version.org.jboss.ws.api>1.0.3.Final</version.org.jboss.ws.api>
         <version.org.jboss.ws.spi>3.1.2.Final</version.org.jboss.ws.spi>
         <version.org.jboss.ws.common>3.1.3.Final</version.org.jboss.ws.common>
@@ -217,7 +217,7 @@
         <version.org.syslog4j>0.9.30</version.org.syslog4j>
         <version.org.wildfly.build-tools>1.1.3.Final</version.org.wildfly.build-tools>
         <version.org.wildfly.checkstyle-config>1.0.5.Final</version.org.wildfly.checkstyle-config>
-        <version.org.wildfly.core>3.0.0.Alpha7</version.org.wildfly.core>
+        <version.org.wildfly.core>3.0.0.Alpha9</version.org.wildfly.core>
         <version.org.wildfly.arquillian>2.0.0.Final</version.org.wildfly.arquillian>
         <version.org.wildfly.naming-client>1.0.0.Beta1</version.org.wildfly.naming-client>
         <version.org.wildfly.security.elytron-subsystem>1.0.0.Alpha10</version.org.wildfly.security.elytron-subsystem>
@@ -230,7 +230,7 @@
         <version.xom>1.2.10</version.xom>
 
         <!-- Non-default maven plugin versions and configuration -->
-        <version.org.zanata.plugin>3.1.1</version.org.zanata.plugin>
+        <version.org.zanata.plugin>3.9.1</version.org.zanata.plugin>
         <version.help.plugin>2.2</version.help.plugin>
         <version.jacoco.plugin>0.6.3.201306030806</version.jacoco.plugin> <!-- Needs to be set explicitely to match with org.jacoco:org.jacoco.ant - see testsuite. -->
         <version.properties.plugin>2.0.1</version.properties.plugin>
@@ -330,6 +330,8 @@
                  <srcDir>target/classes</srcDir>
                  <transDir>src/main/resources</transDir>
                  <includes>**/*.i18n.properties,**/LocalDescriptions.properties</includes>
+                 <!-- In previous versions, 3.8.0 and lower, this defaulted to true -->
+                 <copyTrans>true</copyTrans>
               </configuration>
             </plugin>
             <plugin>
@@ -355,6 +357,12 @@
                                 <JBossAS-Release-Codename>${jboss.as.release.codename}</JBossAS-Release-Codename>
                             </manifestEntries>
                         </archive>
+                        <!-- Do not package the generated logging properties as the generated binaries will be packaged -->
+                        <!-- These files are not required at runtime -->
+                        <excludes>
+                            <exclude>**/*.i18n.properties</exclude>
+                            <exclude>**/*.i18n_*.properties</exclude>
+                        </excludes>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -4026,12 +4034,6 @@
 
             <dependency>
                 <groupId>org.hibernate</groupId>
-                <artifactId>hibernate-search-analyzers</artifactId>
-                <version>${version.org.hibernate.search}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.hibernate</groupId>
                 <artifactId>hibernate-search-orm</artifactId>
                 <version>${version.org.hibernate.search}</version>
                 <exclusions>
@@ -6000,6 +6002,7 @@
                 <version>${version.org.picketlink}</version>
             </dependency>
 
+            <!-- This dependency is no longer used as a module. However it is required for client the JMS client library -->
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>jcl-over-slf4j</artifactId>
@@ -6151,9 +6154,10 @@
             </activation>
             <properties>
                 <!-- [WFCORE-1431] remove SASL workaround -->
-                <modular.jdk.args>-XaddExports:java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
-                    -XaddExports:java.security.sasl/com.sun.security.sasl=ALL-UNNAMED -XaddExports:jdk.unsupported/sun.reflect=ALL-UNNAMED
-                    -XaddExports:jdk.unsupported/sun.misc=ALL-UNNAMED
+                <modular.jdk.args>--add-exports java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
+                    --add-exports java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
+                    --add-exports jdk.unsupported/sun.reflect=ALL-UNNAMED
+                    --add-exports jdk.unsupported/sun.misc=ALL-UNNAMED
                 </modular.jdk.args>
                 <!-- [WFCORE-1494] remove JUL workaround -->
                 <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true</modular.jdk.props>
@@ -6170,7 +6174,7 @@
                             <!-- fork is needed so compiler args can be used -->
                             <fork>true</fork>
                             <compilerArgs>
-                                <arg>-J-addmods</arg>
+                                <arg>-J--add-modules</arg>
                                 <arg>-Jjava.annotations.common</arg>
                             </compilerArgs>
                         </configuration>
